<package>
  <name>trapezoid_trajectory_msgs</name>
  <version>0.0.0</version>
  <description>

    Provides action descriptions for trapezoidal trajectory generator.

  </description>
  <maintainer email="ka.borkowska@outlook.com">Karolina Borkowska</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>



</package>
